--- a/public/index.html
+++ b/public/index.html
@@ -5,21 +5,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>The Mongo Scraper</title>
+  <script src="./reset.css"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+  <script src="./style.css"></script>
 </head>
 <body>
+  <nav>
+    <div class="nav-wrapper">
+      <a href="#" class="brand-logo">Mongo Scraper</a>
+      <ul id="nav-mobile" class="right hide-on-med-and-down">
+        <li><a href="#">Start Scraping</a></li>
+        <li><a href="#">View Saved</a></li>
+        <li><a href="#"></a></li>
+      </ul>
+    </div>
+  </nav>
   <h1>DAVID'S MONGO SCRAPER</h1>
+  <div id="articles">
+    <!-- Article Load Space -->
+  </div>
+
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+  <script src="./app.js"></script>
 </body>
-
-<script>
-//~~~~~~~~~CHEERIO STUFF~~~~~~~
-axios.get('https://www.nytimes.com/section/todayspaper')
-  .then(({data: html})=>{
-    const $ = cheerio.load(html)
-    console.log('~~~~~~~~~~~~~~~SCRAPE MATERIAL BELOW~~~~~~~~~~~~~~~~~~~~~')
-    console.log($('p.css-1gh531').text()) //p-tag summary text.
-  })
-  .catch(e=>console.error(e))
-
-//~~~~~~~~~CHEERIO STUFF~~~~~~~
-</script>
 </html>
