--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
   <script src="./style.css"></script>
 </head>
 <body>
+  <!-- Navbar -->
   <nav>
     <div class="nav-wrapper">
       <a href="#" class="brand-logo">Mongo Scraper</a>
@@ -20,11 +21,12 @@
       </ul>
     </div>
   </nav>
-  <h1>DAVID'S MONGO SCRAPER</h1>
-  <div id="articles">
-    <!-- Article Load Space -->
+  <div class="container">
+    <h1>DAVID'S MONGO SCRAPER</h1>
+    <div id="articles">
+      <!-- Article Load Space -->
+    </div>
   </div>
-
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
